<resources>
    <string name="app_name">ভাড়া আদায় - Rent Collector</string>
    <string name="no_of_rooms">No of Rooms</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="no_of_meters">No Of Meters</string>
    <string name="total_unit">Total Unit</string>
    <string name="add_room">Add New Room/Flat</string>
    <string name="add_meter">Add New Meter</string>
    <string name="room_hint">Enter Room/Flat Name</string>
    <string name="room_name">Room/Flat Name</string>
    <string name="select_month">Select Starting Month</string>
    <string name="tenant_name">Tenant Name</string>
    <string name="tenant_hint">Enter tenant name</string>
    <string name="advance_hint">Advance ?</string>
    <string name="amount">Advance Amount</string>
    <string name="advance_hint2">Enter advance amount</string>
    <string name="select_meter">Select Meter</string>
    <string name="validation">Please check your value</string>
    <string name="meter_name">Meter Name</string>
    <string name="meter_hint">Enter Meter Name</string>
    <string name="select_room">Select Room/Flat</string>
    <string name="select_meter_type">Select Meter Type</string>
    <string name="no_data_message">No Data</string>
    <string name="meter_owner">Meter Owner</string>
    <string name="present_unit">Present Unit</string>
    <string name="past_unit">Past Unit</string>
    <string name="room_owner">Room/Flat Owner</string>
    <string name="start_rent_month">Start Month</string>
    <string name="last_paid">Last Paid</string>
    <string name="new_rent_details">New rent Details</string>
    <string name="new_meter_details">New Meter Details</string>
    <string name="room_list">Room/Flat List</string>
    <string name="meter_list">Meter List</string>
    <string name="present_month_unit">Present Month Unit</string>
    <string name="unit_price">Unit Price</string>
    <string name="previous_month_unit">Previous Month Unit</string>
    <string name="total_unit_1">Total Unit 0</string>
    <string name="total_amount">Total Electricity Bill 0Tk.</string>
    <string name="rent_amount">Rent Amount</string>
    <string name="rent_hint">Enter rent amount</string>
    <string name="select_month_2">Select Month</string>
    <string name="warning_message">Please Check All Data</string>
    <string name="select_data">Select Data</string>
    <string name="success">Successful</string>
    <string name="no_of_tenants">Number of Tenants</string>
    <string name="this_month">This Month</string>
    <string name="new_tenent_this_month">Tenant This Month?</string>
    <string name="tenant_list">Tenant List</string>
    <string name="meter_type">Meter Type</string>
    <string name="add_tenant">Add New Tenant</string>
    <string name="present_month_unit_hint">Enter Present Month Unit</string>
    <string name="previous_month_unit_hint">Enter Previous Month Unit</string>
    <string name="unit_price_hint">Unit Price Hint</string>
    <string name="warning_message_unit">Present month unit value exceed</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="check_your_data">Check Your Data</string>
    <string name="select_valid_date">Select Valid Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="date_hint">21-Mar-2020</string>
    <string name="select_correct_data">Select Correct Data</string>
    <string name="total_rooms">Total Rooms</string>
    <string name="total_meters">Total Meters</string>
    <string name="total_tenants">Total Tenants</string>
    <string name="demo_room_name">Demo Room/Flat Name</string>
    <string name="demo_room_owner_name">Rahim Hasan</string>
    <string name="demo_month">DD-MM-YYYY</string>
    <string name="demo_last_paid_date">12-Jan-2020</string>
    <string name="demo_meter_name">Demo Meter 1</string>
    <string name="demo_meter_type">Sub Meter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="meter_cost_list">Meter Cost List</string>
    <string name="rent_list">Rent List</string>
    <string name="electricity_bills">Electricity Bill List</string>
    <string name="total_bill">Total bill</string>
    <string name="zero">0</string>
    <string name="total_electricity_bill">Total Electricity Bill</string>
    <string name="month_name">Month Name</string>
    <string name="electricity_bill">Electricity Bill</string>
    <string name="good_morning">Good Morning</string>
    <string name="demo_month_and_day">16th May,1996 || Mon</string>
    <string name="good_noon">Good Noon</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="new_room">New Room/Flat</string>
    <string name="add_a_room">Add a new room/flat</string>
    <string name="all_rooms">All rooms</string>
    <string name="new_meter">New Meter</string>
    <string name="add_a_meter">Add a new meter</string>
    <string name="all_meters">All meters</string>
    <string name="new_tenant">New Tenant</string>
    <string name="add_a_tenant">Add a new tenant</string>
    <string name="all_tenants">All tenants</string>
    <string name="all_rents">All rents</string>
    <string name="all_bills">All Bills</string>
    <string name="settings">Settings</string>
    <string name="details_here">Details Here</string>
    <string name="dashboard">Dashboard</string>
    <string name="taka">Taka</string>
    <string name="total_app_visit">Total app visit</string>
    <string name="app_visit">App Visit</string>
    <string name="start_bracket">(</string>
    <string name="end_bracket">)</string>
    <string name="times">Times</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="google_login">Google Login</string>
    <string name="save_your_data_using_google_account">Save your data using your google account</string>
    <string name="units">Units</string>
    <string name="app_visited">App Visited</string>
    <string name="zero_taka">0 Taka</string>
    <string name="zero_unit">0 Unit</string>
    <string name="missing_data">Missing Data</string>
    <string name="name_search">Enter Name</string>
    <string name="enter_data_validation">Please Enter Data</string>
    <string name="filterd">Filtered</string>
    <string name="search_room_name">Search Room/Flat Name</string>
    <string name="list_refreshed">List Refreshed</string>
    <string name="search_month_name">Search Month Name</string>
    <string name="search_tenant_name">Search Tenant Name</string>
    <string name="search_meter_name">Search Meter Name</string>
    <string name="developed_by">Developed By</string>
    <string name="sakhawat_hossain">Sakhawat Hossain</string>
    <string name="demo_day">Saturday</string>
    <string name="all_spend_earnings">All spends and earnings</string>
    <string name="filter_monthly_data">Filter data monthly</string>
    <string name="language_settings">Language Settings</string>
    <string name="english">English</string>
    <string name="bengali">Bengali</string>
    <string name="monthly_rent_amount">Monthly Rent Amount</string>
    <string name="select_data_1">Select Data</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="ok">OK</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_without_underline">Login</string>
    <string name="email_hint">Enter Email</string>
    <string name="email">Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="password">Password</string>
    <string name="hello">Hello</string>
    <string name="sign_up_here">Register From Here</string>
    <string name="sign_up">Registration</string>
    <string name="registration_here">You can register yourself here</string>
    <string name="not_registered">Not Registered ?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login_succcessful">Login was successful</string>
    <string name="login_unsucccessful">Login was unsuccessful</string>
    <string name="registration_succcessful">Registration was successful</string>
    <string name="registration_unsucccessful">Registration was unsuccessful</string>
    <string name="password_must_be_six_character">Password must be six(6) character long</string>
    <string name="password_validation">Password field is missing data</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="logout_sad_text">You will be missed.Please come back again if you like our service.</string>
    <string name="logged_out_successfully">Successfully logged out</string>
    <string name="already_logged_in">Already Logged In</string>
    <string name="new_electricity_bill">New Electricity bill</string>
    <string name="update">Update</string>
    <string name="no_update_available">No Update Available</string>
    <string name="you_are_using">You are using</string>
    <string name="update_available">New update available!</string>
    <string name="version">Version</string>
    <string name="preferences">Preferences</string>
    <string name="not_found">Not Found</string>
    <string name="username_not_found">Username Not Found</string>
    <string name="email_not_found">Email Not Found</string>
    <string name="rate_us">Rate Us</string>
    <string name="tutorial">Tutorial</string>
    <string name="select_year">Select Year</string>
    <string name="change_password">Change Password</string>
    <string name="what_is_vara_adai">What is Vara Adai?</string>
    <string name="about_app_1">
        A home owner can track any kind of status of a tenant by this app.
        Like generating bill, send message and make call to tenant.
        How many tenants are left or active etc.
    </string>
    <string name="about_app_2">
        In addition there will have a dashboard from where a home owner can see number of rooms,
        tenants, filter data by month and year etc.
    </string>
    <string name="core_features">Core Features</string>
    <string name="feature_1">1. Dashboard.</string>
    <string name="feature_2">2. Monthly and Yearly data filter.</string>
    <string name="feature_3">3. Generate Bill with all details.</string>
    <string name="feature_4">4. Send bill via message to tenant.</string>
    <string name="feature_5">5. Call e tenant if necessary.</string>
    <string name="mobile_number_with_digit_hint">Mobile Number (11 Digit Only)</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="my_profile">My Profile</string>
    <string name="login_header">Login Header Banner</string>
    <string name="setup_password">Setup Password</string>
    <string name="room_name_x">Room Name: %s</string>
    <string name="room_status_x">Room Status: %s</string>
    <string name="rent_amount_x">Rent Amount: %d</string>
    <string name="login">Login</string>
    <string name="use_setup_password">Use/Setup your password!</string>
    <string name="advance_filter">Advance Filter</string>
    <string name="filter">Filter</string>
</resources>