<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_action_person"/>

    <item
        android:id="@+id/menu_change_password"
        android:title="@string/change_password"
        android:icon="@drawable/ic_key"/>

    <item
        android:id="@+id/menu_tutorial"
        android:title="@string/tutorial"
        android:icon="@drawable/ic_info_black_24dp"/>

    <item
        android:id="@+id/menu_rate_us"
        android:title="@string/rate_us"
        android:icon="@drawable/ic_star_border_black_24dp"/>

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout_black_24dp"/>

</menu>