<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fadeScrollbars="false"
    android:scrollbars="vertical"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:text="@string/what_is_vara_adai"
            android:textColor="@color/md_black_1000"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:cardElevation="0dp"
            android:translationZ="2dp"
            app:cardCornerRadius="56dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/welcome_intro_photo1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@drawable/logo"
                android:scaleType="center" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_intro_subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:layout_marginTop="16dp"
                android:text="@string/about_app_1"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/welcome_intro_subtitle12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:layout_marginTop="16dp"
                android:text="@string/about_app_2"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/welcome_intro_subtitle14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:layout_marginTop="16dp"
                android:text="@string/core_features"
                android:textColor="@color/md_black_1000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/core_feature_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:layout_marginTop="4dp"
                android:text="@string/feature_1"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/core_feature_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:layout_marginTop="4dp"
                android:text="@string/feature_2"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/core_feature_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:layout_marginTop="4dp"
                android:text="@string/feature_3"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/core_feature_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:layout_marginTop="4dp"
                android:text="@string/feature_4"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/core_feature_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:layout_marginTop="4dp"
                android:text="@string/feature_5"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>