<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login_header"
                android:src="@drawable/user_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/md_black_1000"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_setup_password"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@color/md_grey_600"
                android:drawablePadding="4dp"
                android:layout_marginTop="4dp"
                android:focusable="true"
                app:drawableEndCompat="@drawable/ic_key"
                app:drawableTint="@color/md_black_1000" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:background="@drawable/profile_text_bg"
                android:hint="@string/mobile_number_with_digit_hint"
                android:inputType="numberSigned"
                android:padding="8dp"
                android:maxLength="11"
                android:textColor="@color/md_grey_700"
                android:textColorHighlight="@color/md_grey_700"
                android:textColorHint="@color/md_grey_700"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="8dp"
                android:background="@drawable/profile_text_bg"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="8dp"
                android:maxLength="11"
                android:textColor="@color/md_grey_700"
                android:textColorHighlight="@color/md_grey_700"
                android:textColorHint="@color/md_grey_700"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSetupPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_password"
                app:drawableStartCompat="@drawable/ic_key"
                app:drawableTint="@color/md_black_1000"
                android:drawablePadding="8dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:gravity="end"
                android:layout_gravity="end"
                android:textColor="@color/md_black_1000"
                android:focusable="true" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/login_without_underline"
                android:textAllCaps="false"
                style="@style/BariVara.Button.Primary" />

        </LinearLayout>

    </ScrollView>

</layout>
