<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_white_1000"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/deleteButton"
            android:orientation="vertical">

            <TextView
                android:id="@+id/roomName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center|start"
                android:maxLines="1"
                android:text="@string/room_name_x"
                android:textColor="@color/md_grey_800"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/roomStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center|start"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/room_status_x"
                android:textColor="@color/md_grey_800"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/roomRent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:text="@string/rent_amount_x"
                android:textColor="@color/md_blue_800"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/editButton"
            style="@style/BariVara.Button.Secondary"
            android:layout_width="90dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:text="@string/edit"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/BariVara.Button.Tertiary"
            android:layout_width="90dp"
            android:layout_height="34dp"
            android:layout_below="@id/editButton"
            android:layout_alignParentEnd="true"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/md_red_600" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>