<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white"
        android:padding="12dp">

        <TextView
            android:id="@+id/headingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/advance_filter"
            android:textColor="@color/md_black_1000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/filterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headingText"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_year"
                    android:textColor="@color/md_grey_900"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/YearId"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_back"
                    android:tag="@string/select_year" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/select_month_2"
                    android:textColor="@color/md_grey_900"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/MonthId"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_back"
                    android:tag="@string/select_month" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/filterLayout"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/primaryAction"
                style="@style/BariVara.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/secondaryAction"
                style="@style/BariVara.Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/filter"
                android:textAllCaps="false" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>